logs/hive-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fb303'...
Listing './lib/python3.5/site-packages/fb303_scripts'...
Compiling './lib/python3.5/site-packages/fb303_scripts/fb303_simple_mgmt.py'...
***   File "./lib/python3.5/site-packages/fb303_scripts/fb303_simple_mgmt.py", line 58
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hive_metastore'...
Compiling './lib/python3.5/site-packages/hive_metastore/ThriftHiveMetastore.py'...
***   File "./lib/python3.5/site-packages/hive_metastore/ThriftHiveMetastore.py", line 2987
    except AlreadyExistsException, o1:
                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hive_serde'...
Listing './lib/python3.5/site-packages/hive_service'...
Compiling './lib/python3.5/site-packages/hive_service/ThriftHive.py'...
***   File "./lib/python3.5/site-packages/hive_service/ThriftHive.py", line 343
    except HiveServerException, ex:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hive_thrift_py-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/hive_utils'...
Listing './lib/python3.5/site-packages/hive_utils-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/queryplan'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/reflection'...
Listing './lib/python3.5/site-packages/thrift/reflection/limited'...
Listing './lib/python3.5/site-packages/thrift/server'...
Compiling './lib/python3.5/site-packages/thrift/server/TServer.py'...
***   File "./lib/python3.5/site-packages/thrift/server/TServer.py", line 84
    except TTransport.TTransportException, tx:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/thrift/transport'...
Compiling './lib/python3.5/site-packages/thrift/transport/TSocket.py'...
***   File "./lib/python3.5/site-packages/thrift/transport/TSocket.py", line 78
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
